# blog-back

./: .gitignore  README.org  pyproject.toml  setup.cfg
config/: .env.example.dev  .env.example.prod
deploy/: Dockerfile  docker-compose.dev.yml  docker-compose.prod.yml  entrypoint.sh  nginx.conf
src/blog/: settings.py  urls.py
src/posts/: admin.py  models.py  serializers.py  urls.py  views.py
src/posts/migrations/: 0001_initial.py
tests/: conftest.py
tests/it/: fixtures.py  test_posts_api.py
tests/unit/: test_posts.py
