[project]
name = "blog-back"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=5.2.4",
    "django-storages>=1.14.6",
    "django-stubs>=5.2.1",
    "djangorestframework>=3.16.0",
    "gunicorn>=23.0.0",
    "psycopg2-binary>=2.9.10",
    "python-decouple>=3.8",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["ALL"]
flake8-quotes.inline-quotes = "single"
ignore = [
  "ANN101",
  "ANN401",
  "D1",
  "D203",
  "D213",
  "ERA001",
  "FIX002",
  "FLY002",
  "PGH003",
  "Q000",
  "RUF012",
  "RUF100",
  "S105",
  "S603",
  "S607",
  "TD002",
  "TD003",
  "UP022",
  "UP032"
]
exclude = [
  "manage.py",
  "*/migrations/*",
]

[tool.ruff.per-file-ignores]
"tests/*" = [
    "ARG001",
    "PLC0415",
    "S101"
]

[tool.ruff.format]
quote-style = "single"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "blog.settings"

[dependency-groups]
dev = [
    "flake8-aaa>=0.17.0",
    "mypy>=1.16.1",
    "ruff>=0.12.2",
    "wemake-python-styleguide>=1.2.0",
]
test = [
    "docker>=7.1.0",
    "mixer>=7.2.2",
    "pytest>=8.4.1",
    "pytest-django>=4.11.1",
]
